# play_with_cmake

./: CMakeLists.txt  CMakeUserPresets.json_with_comments  auto_cmake.bash  test.bash  test.cc
scripts/: strip_comments_from_json.bash
